...

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="102dp"
        android:layout_height="44dp"
...

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="102dp"
        android:layout_height="44dp"
...

    <Button
        android:id="@+id/btnAddPlanningExpenses"
        android:layout_width="99dp"
        android:layout_height="65dp"
...

    <Button
        android:id="@+id/btnClearPlanningExpenses"
        android:layout_width="99dp"
        android:layout_height="65dp"
...

    <Button
        android:id="@+id/btnFive"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnFour"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <ImageButton
        android:id="@+id/btnClearInputField"
        android:layout_width="47dp"
        android:layout_height="47dp"
...

    <Button
        android:id="@+id/btnEight"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnNine"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnThree"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnSix"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <TextView
        android:id="@+id/tvInputField"
        android:layout_width="187dp"
        android:layout_height="33dp"
...

    <Button
        android:id="@+id/btnZero"
        android:layout_width="80dp"
        android:layout_height="66dp"
...

    <Button
        android:id="@+id/btnOne"
        android:layout_width="80dp"
        android:layout_height="66dp"
...
