<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpensesFragment">
    <Button
        android:id="@+id/btnFive"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="197dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="468dp"
        android:text="5"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="468dp"
        android:text="4"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnClearInputField"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="590dp"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="197dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="404dp"
        android:text="8"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="340dp"
        android:text="⌫"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="208dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="632dp"
        android:gravity="center_vertical"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="340dp"
        android:text="."
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="404dp"
        android:text="9"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="532dp"
        android:text="3"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="197dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="532dp"
        android:text="2"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="468dp"
        android:text="6"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCurrentMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="668dp"
        android:text="Мои деньги"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="404dp"
        android:text="7"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvInputField"
        android:layout_width="187dp"
        android:layout_height="33dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="596dp"
        android:background="@drawable/textview_border"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="197dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="340dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="532dp"
        android:text="1"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerIncome"
        android:layout_width="408dp"
        android:layout_height="41dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="174dp"
        android:layout_height="49dp"
        android:layout_marginBottom="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTextIncome"
        android:layout_width="98dp"
        android:layout_height="32dp"
        android:layout_marginBottom="504dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddInfo"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginBottom="440dp"
        android:text="Добавить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPlanningMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPlanningMoneyCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="446dp" />


</androidx.constraintlayout.widget.ConstraintLayout>